--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ This workshop, **GIS for Fisheries and Wildlife Sciences**, provides a general i
 
 ## Data Downloads
 
-Start by downloading workshop files here: [Workshop Files (Zipped)]() -- need to add.
+Start by downloading workshop files here: [Workshop Files Via OneDrive](https://mailmissouri-my.sharepoint.com/:f:/g/personal/bwtbgm_umsystem_edu/EixHQDIFTlRFpjGK68ZM5o8Bnglc9n3tO0bLj1iAzIa6pQ?e=FwqV2O).
 
 > **Data used for this workshop came from the following:** <br><br>
 > Eklund, Daniel A.; Donner, Deahn M.; Beck, Albert J.; Rugg, David J. 2023. Beaver colonization events on managed streams in the Chequamegon-Nicolet National Forest, Wisconsin. Fort Collins, CO: Forest Service Research Data Archive. https://doi.org/10.2737/RDS-2023-0019
